HBASE-16881 Address findbugs warnings for backup mega patch